THREESCALE-8772 - AWS secret format with STS

--- a/config/crd/bases/apps.3scale.net_apimanagers.yaml
+++ b/config/crd/bases/apps.3scale.net_apimanagers.yaml
@@ -9467,6 +9467,8 @@ spec:
                                 type: string
                             type: object
                             x-kubernetes-map-type: atomic
+                          sts:
+                            type: boolean
                         required:
                         - configurationSecretRef
                         type: object
