--- a/bundle/manifests/apps.3scale.net_apimanagers.yaml
+++ b/bundle/manifests/apps.3scale.net_apimanagers.yaml
@@ -5162,6 +5162,8 @@ spec:
                                 type: string
                             type: object
                             x-kubernetes-map-type: atomic
+                          sts:
+                            type: boolean
                         required:
                         - configurationSecretRef
                         type: object
