updates for STS struct - fixes, CRD, docs

--- a/config/crd/bases/apps.3scale.net_apimanagers.yaml
+++ b/config/crd/bases/apps.3scale.net_apimanagers.yaml
@@ -9468,7 +9468,12 @@ spec:
                             type: object
                             x-kubernetes-map-type: atomic
                           sts:
-                            type: boolean
+                            properties:
+                              audience:
+                                type: string
+                              enabled:
+                                type: boolean
+                            type: object
                         required:
                         - configurationSecretRef
                         type: object
