--- a/bundle/manifests/apps.3scale.net_apimanagers.yaml
+++ b/bundle/manifests/apps.3scale.net_apimanagers.yaml
@@ -5163,7 +5163,12 @@ spec:
                             type: object
                             x-kubernetes-map-type: atomic
                           sts:
-                            type: boolean
+                            properties:
+                              audience:
+                                type: string
+                              enabled:
+                                type: boolean
+                            type: object
                         required:
                         - configurationSecretRef
                         type: object
