--- a/bundle/manifests/apps.3scale.net_apimanagers.yaml
+++ b/bundle/manifests/apps.3scale.net_apimanagers.yaml
@@ -5163,10 +5163,13 @@ spec:
                             type: object
                             x-kubernetes-map-type: atomic
                           sts:
+                            description: STS authentication spec
                             properties:
                               audience:
+                                description: The ID the token is intended for
                                 type: string
                               enabled:
+                                description: Enable Secure Token Service for  short-term, limited-privilege security credentials
                                 type: boolean
                             type: object
                         required:
