--- a/config/crd/bases/apps.3scale.net_apimanagers.yaml
+++ b/config/crd/bases/apps.3scale.net_apimanagers.yaml
@@ -9468,10 +9468,14 @@ spec:
                             type: object
                             x-kubernetes-map-type: atomic
                           sts:
+                            description: STS authentication spec
                             properties:
                               audience:
+                                description: The ID the token is intended for
                                 type: string
                               enabled:
+                                description: Enable Secure Token Service for  short-term,
+                                  limited-privilege security credentials
                                 type: boolean
                             type: object
                         required:
