THREESCALE-8997 Allow defining the pod priority of components via APIManager CR

--- a/config/crd/bases/apps.3scale.net_apimanagers.yaml
+++ b/config/crd/bases/apps.3scale.net_apimanagers.yaml
@@ -6229,6 +6229,8 @@ spec:
                   enabled:
                     type: boolean
                 type: object
+              priorityClassName:
+                type: string
               resourceRequirementsEnabled:
                 type: boolean
               system:
