PriorityClassName per pod - example for System

--- a/config/crd/bases/apps.3scale.net_apimanagers.yaml
+++ b/config/crd/bases/apps.3scale.net_apimanagers.yaml
@@ -6229,7 +6229,11 @@ spec:
                   enabled:
                     type: boolean
                 type: object
-              priorityClassName:
+              priorityClassNameApicastPod:
+                type: string
+              priorityClassNameBackendPod:
+                type: string
+              priorityClassNameSystemPod:
                 type: string
               resourceRequirementsEnabled:
                 type: boolean
